fix : added bootstarp types

--- a/src/assets/css/Main.scss
+++ b/src/assets/css/Main.scss
@@ -3,5 +3,6 @@
 
 @import "./components/Auth.scss";
 @import "./components/Page.scss";
+@import "./components/Header.scss";
 @import "./components/Menu.scss";
 @import "./components/DragDrop.scss";
