feat : Added sidemenu designs

--- a/src/assets/css/Main.scss
+++ b/src/assets/css/Main.scss
@@ -1,8 +1,8 @@
-@import "./theme/LightTheme.scss";
-@import "./theme/DarkTheme.scss";
+@import "./theme/ThemeMain.scss";
 
 @import "./components/Auth.scss";
 @import "./components/Page.scss";
 @import "./components/Header.scss";
 @import "./components/Menu.scss";
 @import "./components/DragDrop.scss";
+@import "./components/bootstrap.scss";
