--- a/src/assets/css/components/DragDrop.scss
+++ b/src/assets/css/components/DragDrop.scss
@@ -35,7 +35,7 @@
 }
 
 .field-list {
-    border: 1px solid var(--border-white-initial);
+    border: var(--border-max-solid-one-px);
     border-radius: 10px;
 
     .field-to-select {
@@ -45,20 +45,20 @@
 }
 
 .field-dragging {
-    border: 1px solid var(--border-white-initial);
+    border: var(--border-max-solid-one-px);
     border-radius: 10px;
     padding: 10px;
     cursor: auto;
 }
 
 .form-set {
-    border: 1px solid var(--border-white-initial);
+    border: var(--border-max-solid-one-px);
     border-radius: 10px;
     min-height: 8rem;
     width: 100%;
 
     .field-selected {
-        border: 1px solid var(--border-white-initial);
+        border: var(--border-max-solid-one-px);
         margin: 10px;
         border-radius: 10px;
         padding: 10px;
