--- a/src/assets/css/theme/ThemeMain.scss
+++ b/src/assets/css/theme/ThemeMain.scss
@@ -1,2 +1,7 @@
 @import "./LightTheme.scss";
 @import "./DarkTheme.scss";
+
+$hover-transition: .3s ease all;
+$menu-width: 230px;
+$menu-closed-width: 60px;
+$header-height: 60px;
